# ruft

./: .gitignore  Cargo.toml  LICENSE  README.md
core/: Cargo.toml  build.rs
core/proto/: append_entry.proto  pre_vote.proto  request_vote.proto  ruft.proto
core/src/: command.rs  config.rs  endpoint.rs  error.rs  lib.rs  meta.rs  repeat_timer.rs  response.rs  sm.rs
core/src/node/: config.rs  meta.rs  mod.rs  node.rs  ruft.rs  state.rs
core/src/role/: candidate.rs  follower.rs  leader.rs  learner.rs  mod.rs  state.rs
core/src/rpc/: client.rs  endpoint.rs  mod.rs  server.rs
core/src/rpc/command/: mod.rs
core/src/storage/: mod.rs
x/: Cargo.toml
x/src/: main.rs
