[package]
name = "core"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.11.0"

# rpc
prost = "0.14.1"
tonic = "0.14.2"
tonic-prost = "0.14.2"
tokio = { version = "1.0", features = ["full"] }

# log
tracing = "0.1.44"

# schdule
time = "0.3.44"

[build-dependencies]
tonic-prost-build = "0.14.2"
